--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,4 @@
 * @flossypurse
-/docs @flossypurse @djmagee @aarohib @rachfop @DJSanti
+/docs/ @temporalio/docs
+/docs/typescript/ @temporalio/docs @lorensr
 /blog/ @rylandg
