--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@docusaurus/preset-classic": "^2.0.0-beta.16",
     "@mdx-js/react": "^1.5.8",
     "clsx": "^1.1.1",
+    "fs-extra": "^10.0.1",
+    "gray-matter": "^4.0.3",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.6.0",
+    "readdirp": "^3.6.0",
     "remark-typescript-tools": "1.0.9",
     "snipsync": "1.5.0",
     "typescript": "4.x",
