--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -8,27 +8,12 @@ on:
       - master
 
 jobs:
-  prettier:
+  style:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout on push
-        # github object: https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
-        # event names: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
-        if: "github.event_name == 'push'"
-        uses: actions/checkout@v2
-
-      - name: Checkout on PR
-        if: "github.event_name == 'pull_request'"
-        uses: actions/checkout@v2
-        with:
-          # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
-
-      - name: Prettify code
-        uses: creyD/prettier_action@v3.3
-        with:
-          # This part is also where you can pass other options, for example:
-          prettier_options: --write **/*.{js,md}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: dprint-check-action
+      - uses: actions/checkout@v2
+      - uses: dprint/check@v2.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
