--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -11,11 +11,17 @@ jobs:
   style:
     name: CI
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v3
     - name: Cache
       uses: actions/cache@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+    - run: npm autoformat
+    - name: dprint w/ dprint-plugin-prettier
+      run: npm run dprint
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
