--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -3,6 +3,8 @@ name: Continuous Integration
 # This action works with pull requests and pushes
 on:
   pull_request:
+    tags:
+    - '*'
   push:
     tags:
     - '*'
