--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,5 @@ jobs:
       run: npm run prettier
     - name: dprint w/ dprint-plugin-prettier
       run: npm run dprint
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
