--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Cache
       uses: actions/cache@v3
+      key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json', '**/dprint.json') }}
     - uses: actions/setup-node@v3
       with:
         node-version: '16'
