--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -1,39 +1,33 @@
-name: Continuous Integration
+name: CI
 
-# This action works with pull requests and pushes
 on:
   pull_request:
-    tags:
-    - '*'
+    branches: [main]
   push:
+    branches: [main]
     tags:
     - '*'
 
 jobs:
-  style:
+  build:
     name: CI
     runs-on: ubuntu-latest
-  
+
     steps:
-  # check out the repository
-      - uses: actions/checkout@v3
-        # setup node.js
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-        # cache the node_modules folder
-      - name: Cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.npm
-            ~/.cache/dprint
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json', '**/dprint.json') }}
-        # install the packages in the package.json
-      - run: npm ci
-        # verify formatting
-      - name: dprint w/ dprint-plugin-prettier
-        run: npm run fmt-check
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
+    - uses: actions/checkout@v3
+    - name: Cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.npm
+          ~/.cache/dprint
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json', '**/dprint.json') }}
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+    - run: npm ci
+    - run: echo "$PWD"
+    - name: prettier
+      run: npm run prettier
+    - name: dprint w/ dprint-plugin-prettier
+      run: npm run dprint
