--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@docusaurus/core": "^2.0.0-beta.16",
     "@docusaurus/preset-classic": "^2.0.0-beta.16",
     "@mdx-js/react": "^1.5.8",
+    "chart.js": "3.7.1",
     "clsx": "^1.1.1",
     "fs-extra": "^10.0.1",
     "gray-matter": "^4.0.3",
