--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-beta.20",
+    "@docusaurus/plugin-google-gtag": "^2.0.0-beta.21",
     "@docusaurus/preset-classic": "^2.0.0-beta.20",
+    "@ionic-internal/docusaurus-plugin-tag-manager": "^2.0.0",
     "@mdx-js/react": "^1.5.8",
     "chart.js": "3.7.1",
     "clsx": "^1.1.1",
