adding python examples

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "prettier.singleQuote": true,
   "prettier.jsxSingleQuote": true,
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "docwriter.style": "Google"
 }
