--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@mdx-js/react": "^1.5.8",
     "chart.js": "3.7.1",
     "clsx": "^1.1.1",
-    "fs-extra": "^10.0.1",
+    "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
     "path": "^0.12.7",
     "react": "^17.0.2",
@@ -34,6 +34,7 @@
     "readdirp": "^3.6.0",
     "remark-typescript-tools": "1.0.9",
     "snipsync": "1.5.0",
+    "temporalio": "^1.0.0-rc.0",
     "typescript": "4.x",
     "uuid": "^8.3.2",
     "webpack-font-preload-plugin": "^1.5.0"
