updating config header levels, guide gen dir support, link fixes

--- a/guide-gen/guide-configs/concepts/tasks.json
+++ b/guide-gen/guide-configs/concepts/tasks.json
@@ -1,6 +1,7 @@
 {
   "file_name": "tasks.md",
   "id": "tasks",
+  "file_dir": "/",
   "title": "Tasks",
   "sidebar_label": "Tasks",
   "description": "Temporal Task Queues and Worker Processes are tightly coupled components.",
