--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@docusaurus/core": "^2.0.0-beta.20",
     "@docusaurus/preset-classic": "^2.0.0-beta.20",
     "@mdx-js/react": "^1.5.8",
+    "beautiful-react-diagrams": "^0.5.1",
     "chart.js": "3.7.1",
     "clsx": "^1.1.1",
     "fs-extra": "^10.1.0",
@@ -34,8 +35,8 @@
     "react-player": "^2.6.0",
     "readdirp": "^3.6.0",
     "remark-typescript-tools": "1.0.9",
-    "temporalio": "^1.0.0-rc.0",
     "snipsync": "1.7.0",
+    "temporalio": "^1.0.0-rc.0",
     "typescript": "4.x",
     "uuid": "^8.3.2",
     "webpack-font-preload-plugin": "^1.5.0"
