--- a/snipsync.config.yaml
+++ b/snipsync.config.yaml
@@ -20,6 +20,8 @@ origins:
   - owner: temporalio
     repo: samples-php
   - owner: temporalio
+    repo: samples-python
+  - owner: temporalio
     repo: samples-typescript
   # Some samples were left in the SDK code itself because it has better testing
   # capabilities than the samples repo
