--- a/snipsync.config.yaml
+++ b/snipsync.config.yaml
@@ -21,6 +21,8 @@ origins:
     repo: samples-php
   - owner: temporalio
     repo: samples-typescript
+  - owner: temporalio
+    repo: samples-python
   # Some samples were left in the SDK code itself because it has better testing
   # capabilities than the samples repo
   - owner: temporalio
