--- a/assembly/config.json
+++ b/assembly/config.json
@@ -1,5 +1,5 @@
 {
-  "contentSourceDirs": [
+  "content_source_dirs": [
     "docs/app-dev-context",
     "docs/cloud",
     "docs/cluster-ops-context",
@@ -12,13 +12,14 @@
     "docs/php",
     "docs/typescript"
   ],
-  "contentWriteDir": "docs",
-  "tempWriteDir": "assembly/temp",
-  "sourceInfoNodesFileName": "source-info-nodes.json",
-  "guideConfigsPath": "guide-gen/guide-configs",
-  "outlineDiagramJSONFIleName": "outline-diagram.json",
-  "outlineDiagramFilePath": "docs/components",
-  "additionalFilesToParse": [
+  "content_write_dir": "docs",
+  "temp_write_dir": "assembly/temp",
+  "source_info_nodes_file_name": "source-info-nodes.json",
+  "guide_configs_path": "guide-gen/guide-configs",
+  "guide_configs_with_attached_nodes_file_name": "matched-guides.json",
+  "outline_diagram_JSON_fIle_name": "outline-diagram.json",
+  "outline_diagram_file_path": "docs/components",
+  "additional_files_to_parse": [
     "references/commands.md",
     "references/events.md",
     "references/metrics.md",
