--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "readdirp": "^3.6.0",
     "remark-typescript-tools": "1.0.9",
     "snipsync": "1.7.0",
-    "temporalio": "^1.0.0-rc.0",
+    "temporalio": "^1.1.0",
     "typescript": "4.x",
     "uuid": "^8.3.2",
     "webpack-font-preload-plugin": "^1.5.0"
