--- a/assembly/config.json
+++ b/assembly/config.json
@@ -19,6 +19,7 @@
   "guide_configs_with_attached_nodes_file_name": "matched-guides.json",
   "outline_diagram_JSON_fIle_name": "outline-diagram.json",
   "outline_diagram_file_path": "docs/components",
+  "glossary_file_name": "glossary.md",
   "additional_files_to_parse": [
     "references/commands.md",
     "references/events.md",
