mv app dev context files to docs-src

--- a/assembly/config.json
+++ b/assembly/config.json
@@ -1,6 +1,6 @@
 {
   "content_source_dirs": [
-    "docs/app-dev-context",
+    "docs-src/app-dev-context",
     "docs/cloud-context",
     "docs/cluster-ops-context",
     "docs/clusters",
