beefing up all-the-waysto-run-a-cluster

--- a/assembly/config.json
+++ b/assembly/config.json
@@ -4,7 +4,7 @@
     "docs-src/app-dev-context",
     "docs-src/cluster-ops-context",
     "docs/clusters",
-    "docs/concept-context",
+    "docs-src/concept-context",
     "docs/concepts",
     "docs/go",
     "docs/java",
