correct prettier overrides for TypeScript app dev guide
Fix #1379

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -17,7 +17,10 @@
   "useTabs": false,
   "overrides": [
     {
-      "files": ["docs/typescript/**/*.md"],
+      "files": [
+        "docs/typescript/**/*.md",
+        "docs-src/typescript/*.md"
+      ],
       "options": {
         "bracketSpacing": true,
         "singleQuote": true
