moved php to docs-src, added info to legacy pages

--- a/assembly/config.json
+++ b/assembly/config.json
@@ -9,7 +9,7 @@
     "docs/go",
     "docs/java",
     "docs-src/python",
-    "docs/php",
+    "docs-src/php",
     "docs-src/typescript",
     "docs-src/references"
   ],
