--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -17,10 +17,7 @@
   "useTabs": false,
   "overrides": [
     {
-      "files": [
-        "docs/typescript/**/*.md",
-        "docs-src/typescript/*.md"
-      ],
+      "files": ["docs/typescript/**/*.md", "docs-src/typescript/*.md"],
       "options": {
         "bracketSpacing": true,
         "singleQuote": true
