--- a/assembly/config.json
+++ b/assembly/config.json
@@ -14,11 +14,12 @@
     "docs-src/references"
   ],
   "content_write_dir": "docs",
+  "secure_config_dir": "assembly/secure",
+  "notion_creds_file_name": "notion-creds.json",
   "temp_write_dir": "assembly/temp",
   "source_info_nodes_file_name": "source-info-nodes.json",
   "guide_configs_path": "assembly/guide-configs",
   "guide_configs_with_attached_nodes_file_name": "matched-guides.json",
-  "outline_diagram_JSON_fIle_name": "outline-diagram.json",
-  "outline_diagram_file_path": "docs/components",
+  "notion_store_file_name": "notion-questions.json",
   "glossary_file_name": "glossary.md"
 }
