--- a/assembly/config.json
+++ b/assembly/config.json
@@ -7,6 +7,7 @@
     "docs-src/concept-context",
     "docs/concepts",
     "docs/go",
+    "docs-src/go",
     "docs/java",
     "docs-src/python",
     "docs-src/php",
