--- a/assembly/config.json
+++ b/assembly/config.json
@@ -6,13 +6,15 @@
     "docs/clusters",
     "docs-src/concept-context",
     "docs/concepts",
+    "docs-src/concepts",
     "docs/go",
     "docs-src/go",
     "docs/java",
     "docs-src/python",
     "docs-src/php",
     "docs-src/typescript",
-    "docs-src/references"
+    "docs-src/references",
+    "docs-src/tctl"
   ],
   "content_write_dir": "docs",
   "secure_config_dir": "assembly/secure",
