--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -1,34 +1,20 @@
-name: Continuous Integration
+name: dprint check
 
 # This action works with pull requests and pushes
 on:
   pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
 
 jobs:
-  prettier:
+  style:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout on push
-        # github object: https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
-        # event names: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
-        if: "github.event_name == 'push'"
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Checkout on PR
-        if: "github.event_name == 'pull_request'"
-        uses: actions/checkout@v2
-        with:
-          # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
-
-      - name: Prettify code
-        uses: creyD/prettier_action@v3.3
-        with:
-          # This part is also where you can pass other options, for example:
-          prettier_options: --write **/*.{js,md}
+      - uses: dprint/check@v2.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
