--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,10 @@
-- repo: https://github.com/adamchainz/pre-commit-dprint
-  rev: "2.1"
-  hooks:
-    - id: dprint
+- id: dprint
+  name: dprint
+  description: "A pluggable and configurable code formatting platform written in Rust."
+  entry: dprint fmt
+  language: node
+  "types": [text]
+  args: []
+  require_serial: false
+  additional_dependencies: ["dprint@0.32.0"]
+  minimum_pre_commit_version: "0"
