--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - uses: dprint/check@v2.1
+      - uses: actions/setup-node@v1
+      - run: npm run fmt
+      - uses: stefanzweifel/git-auto-commit-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
