--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v1
-      - run: npm run fmt
+      - run: npm run dprint fmt
       - uses: stefanzweifel/git-auto-commit-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
