--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format": "prettier --write .",
     "prepare": "husky install",
     "gen": "./assemble.js",
-    "dprint": "dprint fmt"
+    "fmt": "dprint fmt"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
