--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -17,5 +17,7 @@ jobs:
       - uses: actions/setup-node@v1
       - run: yarn run fmt
       - uses: stefanzweifel/git-auto-commit-action@v4
+        with: 
+          commit_message: dprint fmt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
