--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -8,16 +8,21 @@ on:
   push:
     branches:
       - master
-
+- uses: actions/checkout@v2
+  with:
+    ref: ${{ github.head_ref }}
 jobs:
   style:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
       - uses: actions/setup-node@v1
       - run: yarn run fmt
       - uses: stefanzweifel/git-auto-commit-action@v4
         with: 
           commit_message: dprint fmt
+          commit_options: '--no-verify --signoff'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
