--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -1,34 +1,23 @@
-name: Continuous Integration
+name: Format with dprint and commit changes
 
-# This action works with pull requests and pushes
 on:
-  pull_request:
-  push:
-    branches:
-      - master
+  # runs when a pull request is opened or reopened or when the head branch of the pull request is updated
+  pull_request_target:
 
 jobs:
-  prettier:
+  format:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout on push
-        # github object: https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
-        # event names: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
-        if: "github.event_name == 'push'"
-        uses: actions/checkout@v2
+    
+    - uses: actions/checkout@v3
+      with:
+        repository: ${{ github.event.pull_request.head.repo.full_name }}
+        ref: ${{ github.head_ref }}
 
-      - name: Checkout on PR
-        if: "github.event_name == 'pull_request'"
-        uses: actions/checkout@v2
-        with:
-          # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
+    - uses: actions/setup-node@v1
 
-      - name: Prettify code
-        uses: creyD/prettier_action@v3.3
-        with:
-          # This part is also where you can pass other options, for example:
-          prettier_options: --write **/*.{js,md}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Run dprint
+      run: npm run fmt
+
+    - name: Commit changes
+      uses: stefanzweifel/git-auto-commit-action@v4
