--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,10 @@ jobs:
     
     - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v1
-
+    - uses: actions/setup-node@v3
+    
+    - run: npm ci
+    
     - name: Run dprint
       run: npm run fmt
 
