--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,12 @@ jobs:
     - uses: actions/checkout@v3
 
     - uses: actions/setup-node@v3
-    
-    - run: npm ci
-    
+      with:
+        cache: 'yarn'
+
+    # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-data
+    - run: yarn install --frozen-lockfile
+
     - name: Run dprint
       run: npm run fmt
 
