--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -21,3 +21,5 @@ jobs:
 
     - name: Commit changes
       uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: Format
