--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,9 @@
     "silent": true
   },
   "redirects": [
-    {"source": "/docs/*", "destination": "/:splat"},
-    {"source": "/reference/*", "destination": "/references/:splat"},
-    {"source": "/system-tools/*", "destination": "/devtools/:splat"},
+    {"source": "/docs/:path*", "destination": "/:path*"},
+    {"source": "/reference/:path*", "destination": "/references/:path*"},
+    {"source": "/system-tools/:path*", "destination": "/devtools/:path*"},
     {"source": "/devtools/tctl", "destination": "/tctl"},
     {"source": "/devtools/introduction", "destination": "/"},
     {"source": "/devtools/web-ui", "destination": "/web-ui"},
@@ -73,7 +73,10 @@
       "destination": "https://learn.temporal.io/tutorials/go/ecommerce/build-an-ecommerce-app-with-temporal-part-4-rest-api"
     },
 
-    {"source": "/blog/*", "destination": "https://temporal.io/blog/:splat"},
+    {
+      "source": "/blog/:path*",
+      "destination": "https://temporal.io/blog/:path*"
+    },
 
     {"source": "/temporal-explained", "destination": "/temporal"},
     {"source": "/concepts/introduction", "destination": "/temporal"},
@@ -107,9 +110,12 @@
     },
     {"source": "/temporal-explained/visibility", "destination": "/visibility"},
 
-    {"source": "/content/what-is-*", "destination": "/concepts/what-is-:splat"},
+    {
+      "source": "/content/what-is-:path*",
+      "destination": "/concepts/what-is-:path*"
+    },
 
-    {"source": "/node/*", "destination": "/typescript/:splat"},
+    {"source": "/node/:path*", "destination": "/typescript/:path*"},
     {
       "source": "/typescript/getting-started",
       "destination": "/typescript/introduction#getting-started"
@@ -382,12 +388,12 @@
       "destination": "/go/activities#asynchronous-activity-completion"
     },
     {
-      "source": "/go/how-to-set-startworkflowoptions-in-go*",
-      "destination": "/go/startworkflowoptions-reference:splat"
+      "source": "/go/how-to-set-startworkflowoptions-in-go:path*",
+      "destination": "/go/startworkflowoptions-reference:path*"
     },
     {
-      "source": "/go/how-to-set-activityoptions-in-go*",
-      "destination": "/go/activityoptions-reference:splat"
+      "source": "/go/how-to-set-activityoptions-in-go:path*",
+      "destination": "/go/activityoptions-reference:path*"
     },
 
     {"source": "/java/introduction", "destination": "/java"},
