tctl-next follow up polish

--- a/assembly/guide-configs/tctl-next/config.json
+++ b/assembly/guide-configs/tctl-next/config.json
@@ -2,9 +2,9 @@
   "file_name": "config.md",
   "file_dir": "tctl-next",
   "id": "config",
-  "title": "tctl v2.0.0-beta config command reference",
+  "title": "tctl version-next config command reference",
   "sidebar_label": "config",
-  "description": "How to use the tctl v2.0.0-beta config command",
+  "description": "How to use the tctl version-next config command",
   "use_description": false,
   "toc_max_heading_level": 4,
   "add_tabs_support": true,
