adding redirects for tctl (#1701)
* adding redirects for tctl

* adding redirect

--- a/vercel.json
+++ b/vercel.json
@@ -575,7 +575,6 @@
     },
     {"source": "/server-security", "destination": "/server/security"},
     {"source": "/server-versions-and-dependencies", "destination": "/clusters"},
-
     {"source": "/server/workflow-search", "destination": "/visibility"},
     {
       "source": "/content/how-to-remove-a-search-attribute-from-a-cluster-using-tctl",
@@ -589,10 +588,53 @@
       "source": "/cadence-to-temporal",
       "destination": "/kb/cadence-to-temporal"
     },
-
     {
       "source": "/kb/install-temporal-cluster-for-development",
       "destination": "/kb/all-the-ways-to-run-a-cluster"
+    },
+    {
+      "source": "/kb/install-temporal-cluster-for-development",
+      "destination": "/kb/all-the-ways-to-run-a-cluster"
+    },
+    {
+      "source": "/tctl",
+      "destination": "/tctl-v1"
+    },
+    {
+      "source": "/tctl/workflow/:path*",
+      "destination": "/tctl-v1/workflow#:path*"
+    },
+    {
+      "source": "/tctl/activity/:path*",
+      "destination": "/tctl-v1/activity#:path*"
+    },
+    {
+      "source": "/tctl/admin/:path*",
+      "destination": "/tctl-v1/admin#:path*"
+    },
+    {
+      "source": "/tctl/batch/:path*",
+      "destination": "/tctl-v1/batch#:path*"
+    },
+    {
+      "source": "/tctl/cluster/:path*",
+      "destination": "/tctl-v1/cluster#:path*"
+    },
+    {
+      "source": "/tctl/dataconverter/:path*",
+      "destination": "/tctl-v1/dataconverter#:path*"
+    },
+    {
+      "source": "/tctl/namespace/:path*",
+      "destination": "/tctl-v1/namespace#:path*"
+    },
+    {
+      "source": "/tctl/schedule/:path*",
+      "destination": "/tctl-v1/schedule#:path*"
+    },
+    {
+      "source": "/tctl/taskqueue/:path*",
+      "destination": "/tctl-v1/taskqueue#:path*"
     }
   ]
 }
