align ui ids, update links, yarn gen

--- a/vercel.json
+++ b/vercel.json
@@ -635,6 +635,10 @@
     {
       "source": "/tctl/taskqueue/:path*",
       "destination": "/tctl-v1/taskqueue#:path*"
+    },
+    {
+      "source": "/references/ui-configuration",
+      "destination": "/references/web-ui-configuration"
     }
   ]
 }
