--- a/vercel.json
+++ b/vercel.json
@@ -111,8 +111,8 @@
     {"source": "/temporal-explained/visibility", "destination": "/visibility"},
 
     {
-      "source": "/content/what-is-:path*",
-      "destination": "/concepts/what-is-:path*"
+      "source": "/content/:path(what-is-.*)",
+      "destination": "/concepts/:path"
     },
 
     {"source": "/node/:path*", "destination": "/typescript/:path*"},
@@ -388,12 +388,12 @@
       "destination": "/go/activities#asynchronous-activity-completion"
     },
     {
-      "source": "/go/how-to-set-startworkflowoptions-in-go:path*",
-      "destination": "/go/startworkflowoptions-reference:path*"
+      "source": "/go/how-to-set-startworkflowoptions-in-go",
+      "destination": "/go/startworkflowoptions-reference"
     },
     {
-      "source": "/go/how-to-set-activityoptions-in-go:path*",
-      "destination": "/go/activityoptions-reference:path*"
+      "source": "/go/how-to-set-activityoptions-in-go",
+      "destination": "/go/activityoptions-reference"
     },
 
     {"source": "/java/introduction", "destination": "/java"},
