commit on local, check on forks

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "clear": "docusaurus clear",
     "deploy": "docusaurus deploy",
     "docusaurus": "docusaurus",
-    "fmt": "dprint fmt",
-    "format": "prettier --write .",
+    "format": "dprint fmt",
     "gen": "./assemble.js",
     "prepare": "husky install",
     "serve": "docusaurus serve",
