--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,4 +1,4 @@
-name: Format with dprint and commit changes
+name: Check formatting
 
 on:
   # runs when a pull request is opened or reopened or when the head branch of the pull request is updated
@@ -16,10 +16,19 @@ jobs:
 
     - uses: actions/setup-node@v1
 
-    - name: Run dprint
-      run: npm run fmt
+    - name: Check formatting
+      # if this PR is from a fork
+      if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
+      run: npx dprint check
+
+    - name: Format
+      # if this PR isn't from a fork
+      if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+      run: npm run format
 
     - name: Commit changes
+      # if this PR isn't from a fork
+      if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Format
