--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,7 +2,7 @@ name: Check formatting
 
 on:
   # runs when a pull request is opened or reopened or when the head branch of the pull request is updated
-  pull_request_target:
+  pull_request:
 
 jobs:
   format:
