--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Format
       # if this PR isn't from a fork
       if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-      run: npm run format
+      run: npx dprint format
 
     - name: Commit changes
       # if this PR isn't from a fork
