--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "write-translations": "docusaurus write-translations"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*": "dprint fmt"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.1",
@@ -57,7 +57,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.23.2",
     "husky": "^6.0.0",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.5.1"
+    "lint-staged": "^11.1.2"
   }
 }
