--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     "docusaurus": "docusaurus",
     "format": "dprint fmt",
     "gen": "./assemble.js",
-    "prepare": "husky install",
     "serve": "docusaurus serve",
     "start": "docusaurus start",
     "swizzle": "docusaurus swizzle",
     "write-heading-ids": "docusaurus write-heading-ids",
     "write-translations": "docusaurus write-translations"
-  },
-  "lint-staged": {
-    "**/*": "dprint fmt"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.1",
@@ -55,8 +51,6 @@
   "devDependencies": {
     "dprint": "^0.29.1",
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.23.2",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.1.2"
+    "eslint-plugin-react": "^7.23.2"
   }
 }
