--- a/package.json
+++ b/package.json
@@ -7,18 +7,13 @@
     "clear": "docusaurus clear",
     "deploy": "docusaurus deploy",
     "docusaurus": "docusaurus",
-    "fmt": "dprint fmt",
-    "format": "prettier --write .",
+    "format": "dprint fmt",
     "gen": "./assemble.js",
-    "prepare": "husky install",
     "serve": "docusaurus serve",
     "start": "docusaurus start",
     "swizzle": "docusaurus swizzle",
     "write-heading-ids": "docusaurus write-heading-ids",
     "write-translations": "docusaurus write-translations"
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@docusaurus/core": "^2.1.0",
@@ -56,9 +51,6 @@
   "devDependencies": {
     "dprint": "^0.29.1",
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.23.2",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.5.1"
+    "eslint-plugin-react": "^7.23.2"
   }
 }
