adding tcld docs to Assembly

--- a/assembly/config.json
+++ b/assembly/config.json
@@ -1,6 +1,7 @@
 {
   "content_source_dirs": [
     "docs-src/cloud-context",
+    "docs-src/cloud",
     "docs-src/app-dev-context",
     "docs-src/cluster-ops-context",
     "docs/clusters",
