checking in snippets

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "deploy": "docusaurus deploy",
     "docusaurus": "docusaurus",
     "format": "dprint fmt",
-    "gen": "./assemble.js",
+    "gen": "snipsync && ./assemble.js && dprint fmt && docusaurus build",
+    "gen-cloud": "snipsync && ./assemble.js --cloud && dprint fmt && docusaurus build",
+    "assemble": "./assemble.js",
     "serve": "docusaurus serve",
     "start": "docusaurus start",
     "swizzle": "docusaurus swizzle",
