--- a/assembly/config.json
+++ b/assembly/config.json
@@ -10,6 +10,7 @@
     "docs/go",
     "docs-src/go",
     "docs/java",
+    "docs-src/security",
     "docs-src/python",
     "docs-src/php",
     "docs-src/typescript",
