--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "public": true,
   "trailingSlash": false,
   "github": {
     "silent": true
@@ -546,7 +547,7 @@
       "source": "/server/quick-install",
       "destination": "/clusters/quick-install"
     },
-    { 
+    {
       "source": "/server/security",
       "destination": "/security"
     },
