changed to error

--- a/assembly/config.json
+++ b/assembly/config.json
@@ -17,8 +17,7 @@
     "docs-src/typescript",
     "docs-src/references",
     "docs-src/tctl-v1",
-    "docs-src/tctl-next",
-    "docs-src/strongly-typed-errors"
+    "docs-src/tctl-next"
   ],
   "content_write_dir": "docs",
   "secure_config_dir": "assembly/secure",
