--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,10 @@
   },
   "redirects": [
     {"source": "/docs/:path*", "destination": "/:path*"},
-    {"source": "/typescript/:path*", "destination": "https://legacy-documentation-sdks.temporal.io/typescript/:path*"},
+    {
+      "source": "/typescript/:path*",
+      "destination": "https://legacy-documentation-sdks.temporal.io/typescript/:path*"
+    },
     {"source": "/reference/:path*", "destination": "/references/:path*"},
     {"source": "/system-tools/:path*", "destination": "/devtools/:path*"},
     {"source": "/devtools/tctl", "destination": "/tctl"},
@@ -742,6 +745,10 @@
     {
       "source": "/cloud/tcld/request/get",
       "destination": "/cloud/tcld/request#get"
+    },
+    {
+      "source": "/external-resources",
+      "destination": "/kb/additional-resources"
     }
   ]
 }
