converting code examples to synced snippets

--- a/snipsync.config.yaml
+++ b/snipsync.config.yaml
@@ -13,6 +13,7 @@ origins:
     repo: sdk-typescript
   - owner: temporalio
     repo: samples-go
+    ref: yourapp
   - owner: temporalio
     repo: samples-java
 
